--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="goGreen">#388E3C</color>
+    <color name="reserveBlue">#448AFF</color>
+    <color name="endRed">#D32F2F</color>
+    <color name="pauseSky">#03A9F4</color>
+    <color name="cancelReservationCyan">#00BCD4</color>
 </resources>
